# CodeHaat

./: .gitignore  LICENSE  README.md  docker-compose.yml  test-docker.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-bot.yml  release.yml  setup-branch-protection.yml
apps/web/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/web/src/: middleware.ts
assets/: LOGO-DESIGN.md
config/seaweedfs/: s3.json  s3.json.example
docs/: 01-PRD.md  02-ARCHITECTURE.md  03-RULES.md  04-DESIGN.md  05-TRD.md  06-APP-FLOW.md  07-BACKEND.md
services/ai-service/: .dockerignore  .env.example  Dockerfile  requirements.txt
services/core-engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile
services/core-engine/src/: main.rs  storage.rs
services/core-engine/src/handlers/: auth.rs  health.rs  mod.rs  notifications.rs  orders.rs  products.rs  profile.rs  reviews.rs  seller.rs  upload.rs  wallet.rs
services/core-engine/src/middleware/: mod.rs
services/core-engine/src/models/: mod.rs
services/core-engine/src/services/: auth.rs  mod.rs  payment.rs  supabase.rs
services/core-engine/src/utils/: mod.rs
services/infra-worker/: .dockerignore  .env.example  Dockerfile  go.mod
services/realtime-service/: .env.example  Dockerfile  package-lock.json  package.json
sql/: 01-schema.sql
supabase/: DATABASE_FULL_SETUP.sql  FRESH_DATABASE.sql
supabase/migrations/: 0001_init.sql
(+146 files in other folders)
